# domilite

./: .coverage  .pre-commit-config.yaml  .readthedocs.yaml  README.md  justfile  pyproject.toml  tox.toml
.github/workflows/: pypi_package.yml  tests.yml
docs/source/: conf.py  index.rst  install.rst  internals.rst  reference.rst
docs/source/api/: domilite.accessors.Attributes.rst  domilite.accessors.AttributesProperty.rst  domilite.accessors.ChainedMethodError.rst  domilite.accessors.Classes.rst  domilite.accessors.ClassesProperty.rst  domilite.accessors.PrefixAccess.rst  domilite.accessors.PrefixAccessor.rst  domilite.dom_tag.Flags.rst  domilite.dom_tag.dom_tag.rst  domilite.flags.Flag.rst  domilite.flags.auto.rst  domilite.render.RenderFlags.rst  domilite.svg.animate.rst  domilite.svg.animateMotion.rst  domilite.svg.animateTransform.rst  domilite.svg.circle.rst  domilite.svg.clipPath.rst  domilite.svg.defs.rst  domilite.svg.desc.rst  domilite.svg.ellipse.rst  domilite.svg.filter.rst  domilite.svg.g.rst  domilite.svg.image.rst  domilite.svg.line.rst  domilite.svg.linearGradient.rst  domilite.svg.marker.rst  domilite.svg.mask.rst  domilite.svg.mpath.rst  domilite.svg.path.rst  domilite.svg.pattern.rst  domilite.svg.polygon.rst  domilite.svg.radialGradient.rst  domilite.svg.rect.rst  domilite.svg.stop.rst  (+125 more)
src/domilite/: __init__.py  _version.py  accessors.py  dom_tag.py  flags.py  render.py  svg.py  tags.py  template.py  util.py
tests/: conftest.py  test_accesors.py  test_dom_tag.py  test_render.py  test_svg.py  test_tags.py  test_template.py  test_util.py
